--- a/src/main/resources/Jaina/localization/ZHS/relics.json
+++ b/src/main/resources/Jaina/localization/ZHS/relics.json
@@ -10,21 +10,21 @@
     "NAME": "奥金晶体",
     "FLAVOR": "蕴藏着奥术能量的天然晶体，十分珍稀。",
     "DESCRIPTIONS": [
-      "你每回合第一次打出 #p奥术牌 时，手牌中一张随机牌在这个回合耗能变为 #b0 。"
+      "你每回合第一次打出 #y奥术牌 时，手牌中一张随机牌在这个回合耗能变为 #b0 。"
     ]
   },
   "jaina:ArchmageStuff": {
     "NAME": "大法师之杖",
     "FLAVOR": "大法师的法力好像也不怎么样啊。",
     "DESCRIPTIONS": [
-      "战斗开始时，将 #b1 张普通 #b法术牌 放入你的手牌。"
+      "战斗开始时，将 #b1 张随机普通法术牌放入你的手牌。"
     ]
   },
   "jaina:AscendantScroll": {
     "NAME": "升格卷轴",
     "FLAVOR": "一个记载着古老文字的卷轴，使用它可能会造成不可预料的后果。",
     "DESCRIPTIONS": [
-      "右键使用 [E] [E] ：将 #b1 张随机 #y法术牌 放入的你手牌，这张卡本回合耗能减少 #y2 。"
+      "右键使用 [E] [E] ：将 #b1 张随机法术牌放入的你手牌，这张卡本回合耗能减少 #b2 。"
     ]
   },
   "jaina:BookOfWonders": {
@@ -38,21 +38,21 @@
     "NAME": "华丽的长袍",
     "FLAVOR": "一件有诸多宝石镶嵌在里面的长袍，没有人能驾驭它的力量。",
     "DESCRIPTIONS": [
-      "你每回合不能打出超过 #b3 张牌。你的 #y法术牌 耗能为 #b0 。"
+      "你每回合不能打出超过 #b3 张牌。你的法术牌耗能为 #b0 。"
     ]
   },
   "jaina:RubySpellstone": {
     "NAME": "法术红宝石",
     "FLAVOR": "“最后一枚石头毁灭了它的主人，无名的法师破解了结界。阿扎里发出绝望的咆哮，被封入虚空，再也不见踪迹。”——《魔石》",
     "DESCRIPTIONS": [
-      "每当你连续使用 #b3 张相同属性的 #b法术牌 ，获得 [E] 。"
+      "每当你连续使用 #b3 张相同种类的法术牌，获得 [E] 。"
     ]
   },
   "jaina:SphereOfSapience": {
     "NAME": "感知宝珠",
     "FLAVOR": "那张牌也许会迟到，但从不缺席。",
     "DESCRIPTIONS": [
-      "右键使用：每场战斗一次， #y预见 #b5 ，抽 #b1 张牌。"
+      "右键使用（每场战斗一次）： #y预见 #b5 ，抽 #b1 张牌。"
     ]
   },
   "jaina:TheCoin": {
