--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -1,24 +1,21 @@
 [
   {
     "NAMES": [
-      "奥术",
-      "Arcane"
+      "奥术"
     ],
     "PROPER_NAME": "奥术",
     "DESCRIPTION": "奥术法术是一种难以掌控充满随机性的法术，同时也能让你获得强大的能力。"
   },
   {
     "NAMES": [
-      "冰霜",
-      "Frost"
+      "冰霜"
     ],
     "PROPER_NAME": "冰霜",
     "DESCRIPTION": "冰霜法术可以限制敌人的行动，将场面牢牢地掌控在自己手中。"
   },
   {
     "NAMES": [
-      "火焰",
-      "Fire"
+      "火焰"
     ],
     "PROPER_NAME": "火焰",
     "DESCRIPTION": "火焰法术能造成高额的伤害和燃烧效果，但小心伤到自己！"
@@ -27,42 +24,56 @@
     "NAMES": [
       "冻结"
     ],
+    "PROPER_NAME": "冻结",
     "DESCRIPTION": "被 #b冻结 的角色失去他的下一次行动机会。 NL #b冻结 效果不能叠加。"
   },
   {
     "NAMES": [
       "法术伤害"
     ],
+    "PROPER_NAME": "法术伤害",
     "DESCRIPTION": "提高法术造成的伤害和获得的格挡，或增强其他效应。"
   },
   {
     "NAMES": [
       "燃烧"
     ],
-    "DESCRIPTION": "具有 #r燃烧 的敌人在回合结束时失去生命值。"
+    "PROPER_NAME": "燃烧",
+    "DESCRIPTION": "具有 #y燃烧 的敌人在回合结束时失去生命值。"
   },
   {
     "NAMES": [
       "即逝"
     ],
+    "PROPER_NAME": "即逝",
     "DESCRIPTION": "在战斗结束前被移除出牌组。 NL 不会被放入消耗牌堆。"
   },
   {
     "NAMES": [
       "自动释放"
     ],
+    "PROPER_NAME": "自动释放",
     "DESCRIPTION": "抽到时自动使用。"
+  },
+  {
+    "NAMES": [
+      "缓冲"
+    ],
+    "PROPER_NAME": "缓冲",
+    "DESCRIPTION": "阻止下一次你受到的生命值损伤。"
   },
   {
     "NAMES": [
       "发现"
     ],
+    "PROPER_NAME": "发现",
     "DESCRIPTION": "从三张卡牌中选择一张加入你的手牌。"
   },
   {
     "NAMES": [
       "烧伤"
     ],
-    "DESCRIPTION": "将若干张 #r灼烧 放入你的弃牌堆中。"
+    "PROPER_NAME": "烧伤",
+    "DESCRIPTION": "将若干张 #y灼烧 放入你的弃牌堆中。"
   }
 ]
