--- a/src/main/resources/Jaina/localization/ZHS/ui.json
+++ b/src/main/resources/Jaina/localization/ZHS/ui.json
@@ -22,5 +22,20 @@
       "选择一张牌",
       "不能 #y打出 更多的牌了！"
     ]
+  },
+  "jaina:keywords": {
+    "TEXT_DICT": {
+      "Arcane": "奥术",
+      "Frost": "冰霜",
+      "Fire": "火焰",
+      "Frozen": "冻结",
+      "Spelldamage": "法术伤害",
+      "Combustion": "燃烧",
+      "Purge": "即逝",
+      "Autoplay": "自动释放",
+      "Buffer": "缓冲",
+      "Discover": "发现",
+      "Burnt": "烧伤"
+    }
   }
 }
