优化了本地化文本，修复了一些bug。

--- a/src/main/resources/Jaina/localization/ENG/keywords.json
+++ b/src/main/resources/Jaina/localization/ENG/keywords.json
@@ -28,10 +28,10 @@
       "Frozen",
       "frozen",
       "Freeze",
-      "freeze",
+      "freeze"
     ],
     "PROPER_NAME": "Frozen",
-    "DESCRIPTION": "A #bFrozen creature may not act. #bFrozen can NOT stack."
+    "DESCRIPTION": "A #yFrozen creature may not act. #yFrozen can NOT stack."
   },
   {
     "NAMES": [
@@ -47,7 +47,7 @@
       "combustion"
     ],
     "PROPER_NAME": "Combustion",
-    "DESCRIPTION": "#rCombusting creatures will lose HP at the end of their turn."
+    "DESCRIPTION": "#yCombusting creatures will lose HP at the end of their turn."
   },
   {
     "NAMES": [
