--- a/src/main/resources/Jaina/localization/ZHS/character.json
+++ b/src/main/resources/Jaina/localization/ZHS/character.json
@@ -1,10 +1,10 @@
 {
   "jaina:Jaina": {
     "NAMES": [
-      "吉安娜·普罗德摩尔"
+      "吉安娜"
     ],
     "TEXT": [
-      "一位强大的法师，肯瑞托和达拉然的领袖。但不要把她的仁慈当做软弱，不然她会毫不犹豫地让你尝到惹怒魔法师的下场。",
+      "一位强大的法师，肯瑞托和达拉然的领袖，人称“大海的女儿”。但不要把她的仁慈当做软弱，不然她会毫不犹豫地让你尝到惹怒魔法师的下场。",
       "“我的魔法能击败一切！”"
     ]
   }
