--- a/src/main/resources/Jaina/localization/ZHS/relics.json
+++ b/src/main/resources/Jaina/localization/ZHS/relics.json
@@ -3,7 +3,7 @@
     "NAME": "艾露尼斯",
     "FLAVOR": "不可阻挡的奥术之力……却被困在这么小的空间里。",
     "DESCRIPTIONS": [
-      "在你的每个回合开始时，额外抽 #b3 张牌。你每次洗牌时受到 #b5 点伤害。"
+      "在你的回合开始时，额外抽 #b3 张牌。你每次洗牌时受到 #b5 点伤害。"
     ]
   },
   "jaina:ArcaniteCrystal": {
@@ -13,18 +13,18 @@
       "你每回合第一次打出 #y奥术牌 时，手牌中一张随机牌在这个回合耗能变为 #b0 。"
     ]
   },
-  "jaina:ArchmageStuff": {
+  "jaina:ArchmageStaff": {
     "NAME": "大法师之杖",
-    "FLAVOR": "大法师的法力好像也不怎么样啊。",
+    "FLAVOR": "一位大法师遗留下来的法杖，曾经蕴含着强大的力量。",
     "DESCRIPTIONS": [
       "战斗开始时，将 #b1 张随机普通法术牌放入你的手牌。"
     ]
   },
   "jaina:AscendantScroll": {
     "NAME": "升格卷轴",
-    "FLAVOR": "一个记载着古老文字的卷轴，使用它可能会造成不可预料的后果。",
+    "FLAVOR": "一张记载着古老文字的卷轴，使用它可能会造成不可预料的后果。",
     "DESCRIPTIONS": [
-      "右键使用 [E] [E] ：将 #b1 张随机法术牌放入的你手牌，这张卡本回合耗能减少 #b2 。"
+      "在你的回合， #y右键使用 ：消耗 [E] [E] 。将 #b1 张随机法术牌放入的你手牌，这张卡本回合耗能减少 #b2 。"
     ]
   },
   "jaina:BookOfWonders": {
@@ -36,7 +36,7 @@
   },
   "jaina:RobesOfGaudiness": {
     "NAME": "华丽的长袍",
-    "FLAVOR": "一件有诸多宝石镶嵌在里面的长袍，没有人能驾驭它的力量。",
+    "FLAVOR": "一件有诸多宝石镶嵌在里面的长袍，但穿上它的没人能够驾驭它的力量。",
     "DESCRIPTIONS": [
       "你每回合不能打出超过 #b3 张牌。你的法术牌耗能为 #b0 。"
     ]
@@ -52,7 +52,7 @@
     "NAME": "感知宝珠",
     "FLAVOR": "那张牌也许会迟到，但从不缺席。",
     "DESCRIPTIONS": [
-      "右键使用（每场战斗一次）： #y预见 #b5 ，抽 #b1 张牌。"
+      "每场战斗一次，在你的回合， #y右键使用 ： #y预见 #b5 ，抽 #b1 张牌。"
     ]
   },
   "jaina:TheCoin": {
