--- a/src/main/resources/Jaina/localization/ZHS/ui.json
+++ b/src/main/resources/Jaina/localization/ZHS/ui.json
@@ -18,7 +18,7 @@
     "TEXT": [
       "冻结",
       "该敌人被冻结了。",
-      "这名敌人的意图不是 #r攻击。 ",
+      "这名敌人的意图不是 #r攻击！",
       "选择一张牌",
       "不能 #y打出 更多的牌了！"
     ]
@@ -29,7 +29,7 @@
       "Frost": "冰霜",
       "Fire": "火焰",
       "Frozen": "冻结",
-      "Spelldamage": "法术伤害",
+      "spell_force": "法术强度",
       "Combustion": "燃烧",
       "Purge": "即逝",
       "Autoplay": "自动释放",
