--- a/src/main/resources/Jaina/localization/ENG/ui.json
+++ b/src/main/resources/Jaina/localization/ENG/ui.json
@@ -18,7 +18,7 @@
     "TEXT": [
       "Frozen",
       "This enemy is frozen.",
-      "The enemy doesn't intend to #rattack!.",
+      "The enemy doesn't intend to #rattack!",
       "Choose a card",
       "I can't #yplay any more cards!"
     ]
