--- a/src/main/resources/Jaina/localization/ZHS/powers.json
+++ b/src/main/resources/Jaina/localization/ZHS/powers.json
@@ -2,13 +2,13 @@
   "jaina:ArcaneGatePower": {
     "NAME": "奥术之门",
     "DESCRIPTIONS": [
-      "打出 #y奥术 牌时造成 #b%d 点伤害。"
+      "每次打出 #y奥术 牌时造成 #b%d 点伤害。"
     ]
   },
   "jaina:ArcticArmorPower": {
     "NAME": "寒甲术",
     "DESCRIPTIONS": [
-      "打出 #y冰霜 牌时获得 #b%d 点 #y格挡 。"
+      "每次打出 #y冰霜 牌时获得 #b%d 点 #y格挡 。"
     ]
   },
   "jaina:CombustionPower": {
@@ -20,7 +20,7 @@
   "jaina:EvocationPower": {
     "NAME": "法力唤醒",
     "DESCRIPTIONS": [
-      "回合开始时 #y法术伤害 + #b%d 。"
+      "回合开始时获得 #b%d 层 #y法术伤害 。"
     ]
   },
   "jaina:FlameWardPower": {
@@ -38,13 +38,13 @@
   "jaina:FrozenPower": {
     "NAME": "冻结",
     "DESCRIPTIONS": [
-      "被 #y冻结 的角色失去他的下一次行动机会。 NL #b冻结 效果不能叠加。"
+      "被 #y冻结 而无法行动。 NL #b冻结 效果不能叠加。"
     ]
   },
   "jaina:IceBlockPower": {
     "NAME": "寒冰屏障",
     "DESCRIPTIONS": [
-      "防止你受到的下一次致命攻击。"
+      "防止你受到的下一次致命伤害。"
     ]
   },
   "jaina:IncantersPower": {
@@ -57,7 +57,7 @@
   "jaina:LoseSpellDamagePower": {
     "NAME": "法术伤害下降",
     "DESCRIPTIONS": [
-      "回合结束时 #y法术伤害 - #b%d 。"
+      "回合结束时失去 #b%d 层 #y法术伤害 。"
     ]
   },
   "jaina:ManaBindPower": {
@@ -70,7 +70,7 @@
   "jaina:SpellDamagePower": {
     "NAME": "法术伤害",
     "DESCRIPTIONS": [
-      "#y法术伤害 + #b%d 。"
+      "法术的效果提高 #b%d 点。"
     ]
   },
   "jaina:SplittingImagePower": {
@@ -82,7 +82,7 @@
   "jaina:VaporizePower": {
     "NAME": "蒸发",
     "DESCRIPTIONS": [
-      "受到攻击时对攻击者造成相同的伤害。 NL 受到一次攻击仅触发一次。",
+      "受到攻击时对攻击者造成相同的伤害。 NL 每次受到攻击减少 #b1 层。",
       "蒸发+"
     ]
   },
